--- a/about.css
+++ b/about.css
@@ -145,7 +145,7 @@ body{
 
 .about-text {
   flex: 1 1 60%;             
-  min-width: 250px;          */
+  min-width: 250px;          
 }
 
 .about-image {
