--- a/style_sample_1.css
+++ b/style_sample_1.css
@@ -60,22 +60,7 @@ animation: slideInBtn 0.6s ease-out forwards, pulse 2s infinite 0.6s, glow 2s ea
 
 
 
-<<<<<<< HEAD
-=======
-.navbar {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    background: rgba(17, 17, 24, 0.45);  /* transparent */
-    backdrop-filter: blur(10px);         /* glass effect */
-    padding: 10px 20px 10px 100px;
-    height: 60px;
-    gap: 40px;
-    position: relative;
-    overflow: hidden;
-    z-index: 5;
-}
->>>>>>> 7d70141 (Other page header fix)
+
 
 
 
@@ -485,15 +470,15 @@ a.initiative-btn { text-decoration: none; display: inline-block; }
 body {
 background-color: #000;
 color: #fff;
-margin: 0;
+margin: 10px;
 font-family: Arial, sans-serif;
 }
 
 .about-section {
 text-align: center;
 padding: 80px 20px;
-max-width: 900px;
-margin: auto;
+width: 80%;
+margin: 0 auto;
 }
 
 .about-section h2 {
@@ -509,6 +494,7 @@ font-size: 20px;
 line-height: 1.8;
 animation: blinkCursor 0.7s infinite;
 padding: 0 5px;
+
 }
 
 .read-more-btn {
@@ -699,9 +685,12 @@ color:#fcd703;
 
 .about-section p {
 color: #ddd;
-line-height: 1.78;
-font-size: 16px;
+line-height: 1.58;
+font-size: 18px;
 margin-bottom: 18px;
+width: 155%;
+margin: 36px 8px;
+text-align: justify;
 }
 
 .about-section .read-more,
