--- a/style_sample_1.css
+++ b/style_sample_1.css
@@ -2949,3 +2949,8 @@ body {
     height: 0 !important;
   }
 }
+@media (max-width: 768px) {
+  .main-header {
+    padding-bottom:  23px !important; 
+  }
+}
