--- a/contactus.css
+++ b/contactus.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Lora', serif;
-    background: #111118;
+    background: #00003d;
     color: #fff;
     cursor: none; /* Hide default cursor for yellow glow effect */
 }
